--- a/tasks.html
+++ b/tasks.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Tasks and Project</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </head>
 <body>
   <h1>This is my project list</h1>
