insert links google

--- a/tasks.html
+++ b/tasks.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Tasks and Project</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <title>
+  Tasks and Project
+  </title>
+  <script>
+   alert("Hello")
+  </script>
+
+
 </head>
 <body>
   <h1>This is my project list</h1>
