insert links google

--- a/tasks.html
+++ b/tasks.html
@@ -5,9 +5,23 @@
   <title>
   Tasks and Project
   </title>
-  <script>
-   alert("Hello")
-  </script>
+<script>
+	
+    	$.get("https://sheetsu.com/apis/ed34be83", function(data, status){
+        	console.log("Data: ");
+        	console.log(data);
+        	console.log("\nStatus: ");
+        	console.log(status);
+    	});
+
+    	$.get("https://sheetsu.com/apis/18932bea", function(data, status){
+        	console.log("Data: ");
+        	console.log(data);
+        	console.log("\nStatus: ");
+        	console.log(status);
+    	});
+
+</script>
 
 
 </head>
